@@ -82,7 +82,7 @@ Files-Excluded:
  third_party/harfbuzz-ng/src
  third_party/harfbuzz-ng/harfbuzz.gni
  third_party/highway
- third_party/llvm
+ third_party/llvm*
  third_party/libei
  third_party/webgl
  third_party/libpng
@@ -151,14 +151,14 @@ Files-Excluded:
  third_party/libxml/win32
  third_party/libxml/BUILD.gn
  third_party/libxml/src
- third_party/llvm-build-tools
+ third_party/node/linux
  third_party/node/node_modules.tar.gz
  third_party/node/node_modules/acorn
  third_party/node/node_modules/rollup
  third_party/node/node_modules/mocha/mocha.js
- third_party/rust-src
+ third_party/rust-*
  third_party/node/node_modules/chai/chai.js
- third_party/openscreen/src/buildtools/third_party/eu-strip/bin
+ third_party/openscreen/src/buildtools
  third_party/siso/siso
  third_party/accessibility-audit/axs_testing.js
  third_party/catapult
